[package]
name = "meidolang"
version = "0.1.0"
authors = ["Squirrel Dontask <squirrel6946@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = {verison="0.12.0"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }